# hector_tedusar_workshop

./: .gitignore  README.md
baxter_open_door_high_level/baxter_open_door_control/: CMakeLists.txt  package.xml
baxter_open_door_high_level/baxter_open_door_control/src/: baxter_open_door_control.cpp  baxter_open_door_control_node.cpp
baxter_open_door_high_level/baxter_open_door_control_msgs/: CMakeLists.txt  package.xml
baxter_open_door_high_level/baxter_open_door_control_msgs/msg/: BaxterState.msg
baxter_open_door_high_level/baxter_open_door_control_msgs/srv/: SetOperationMode.srv
box_detection/: CMakeLists.txt  README.md  package.xml
box_detection/action/: BoxDetection.action
box_detection/include/box_detection/: box_detection_node.h
box_detection/launch/: box_detection.launch  moveit_utils.launch  utils.launch
box_detection/src/: box_detection_node.cpp
box_detection/srv/: DetectBoxes.srv
box_detection_and_shoring/: CMakeLists.txt  package.xml
box_detection_and_shoring/include/box_detection_and_shoring/: shoring_node.h
box_detection_and_shoring/launch/: shoring_default.launch
box_detection_and_shoring/src/: shoring_node.cpp
cartesian_controller/: CMakeLists.txt  package.xml
cartesian_controller/include/cartesian_controller/: cartesian_controller.hpp
cartesian_controller/src/: cartesian_controller.cpp
grasp_handle/: CMakeLists.txt  package.xml
grasp_handle/launch/: grasp_handle.launch
grasp_handle/src/: grasp_handle_node.cpp
grasp_handle/src/grasp/: simple_grasp.cpp
hector_obelix_schunk_description/: CMakeLists.txt  package.xml
hector_obelix_schunk_description/launch/: xacrodisplay_common.launch
hector_obelix_schunk_description/urdf/: obelix_ugv_schunk_arm.urdf.xacro
ipa_canopen_core/include/ipa_canopen_core/: canopen.h
ipa_canopen_core/src/: ipa_canopen_core.cpp
opening_door/: CMakeLists.txt  package.xml
opening_door/launch/: opening_door.launch
opening_door/src/: opening_door.cpp
push_door_handle/: CMakeLists.txt  package.xml
push_door_handle/launch/: push_handle.launch
push_door_handle/src/: push_handle.cpp
rosinstall/: handle_detector.rosinstall  schunk_moveit.rosinstall
schunk_description/cmake/: schunk_descriptionConfig.cmake
schunk_description/urdf/lwa4p/: lwa4p.urdf.xacro
schunk_lwa4p_control/: CMakeLists.txt  package.xml
schunk_lwa4p_control/config/: canopen.yaml  cartesian_controller.yaml  gripper_controller.yaml  hardware_controllers.yaml  velocity_trajectory_controller.yaml
schunk_lwa4p_control/include/schunk_lwa4p_control/: schunk_lwa4p_control.hpp  weiss_wsg_gripper_control.hpp
schunk_lwa4p_control/launch/: controller_spawner.launch  schunk_lwa4p_control.launch  schunk_lwa4p_sim.launch  schunk_lwa4p_urdf.launch
schunk_lwa4p_control/src/: schunk_lwa4p_control.cpp  weiss_wsg_gripper_control.cpp
schunk_lwa4p_control/urdf/: lwa4p.urdf.xacro  schunk_wsg_50.urdf.xacro  wsg_50.urdf.xacro
schunk_lwa4p_moveit/: .setup_assistant  CMakeLists.txt  package.xml
schunk_lwa4p_moveit/config/: controllers.yaml  fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  lwa4p.srdf  ompl_planning.yaml
schunk_lwa4p_moveit/launch/: default_warehouse_db.launch  demo.launch  lwa4p_moveit_controller_manager.launch.xml  move_group.launch  moveit.rviz  planning_context.launch  trajectory_execution.launch.xml  warehouse.launch
schunk_lwa4p_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
schunk_lwa4p_moveit_config/config/: controllers.yaml  fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  lwa4p.srdf  ompl_planning.yaml
schunk_lwa4p_moveit_config/launch/: default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  lwa4p_moveit_controller_manager.launch.xml  move_group.launch  moveit.rviz  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
schunk_teleop/: CMakeLists.txt  package.xml
schunk_teleop/config/: controller_default.yaml
schunk_teleop/include/schunk_teleop/: schunk_teleop_node.h
schunk_teleop/launch/: teleop_default.launch  teleop_ps3.launch
schunk_teleop/src/: schunk_teleop_node.cpp
shoring_behaviour/: CMakeLists.txt  package.xml
shoring_behaviour/include/shoring_behaviour/: shoring_behaviour_node.hpp
shoring_behaviour/launch/: shoring_bahaviour_default.launch
shoring_behaviour/src/: shoring_behaviour_node.cpp
shoring_msgs/: CMakeLists.txt  package.xml
shoring_msgs/action/: PlaceBlock.action
tug_grasp_object/: CMakeLists.txt  package.xml
tug_grasp_object/include/tug_grasp_object/: grasp_object_node.h
tug_grasp_object/src/: grasp_object_node.cpp
tug_grasp_object/src/grasp_object/: grasp_door_handle.cpp  grasp_object.cpp
tug_grasp_object/src/grasping_point/: grasping_point_door_handle_calculation.cpp
tug_grasp_object_msgs/: CMakeLists.txt  package.xml
tug_grasp_object_msgs/action/: GraspObject.action  OpenDoor.action  PushDoorHandle.action
tug_grasp_object_msgs/msg/: GraspObject.msg
tug_open_door/: CMakeLists.txt  package.xml
tug_open_door/include/tug_open_door/: open_door_node.h
tug_open_door/src/: open_door_node.cpp
tug_open_door/src/open_door/: open_door.cpp
tug_push_doorhandle/: CMakeLists.txt  package.xml
tug_push_doorhandle/include/tug_push_door_handle/: push_door_handle_node.h
tug_push_doorhandle/src/: push_door_handle_node.cpp
weiss_wsg_gripper/: CMakeLists.txt  package.xml
weiss_wsg_gripper/include/weiss_wsg_gripper/: gripper.h  gripper_commands.def  gripper_error_codes.def  gripper_exceptions.h  gripper_grasping_states.def  gripper_packet_checksum.h  gripper_packet_payload.h  gripper_packet_receiver.h  gripper_system_state_flags.def  ipa_canopen_transport.h  transport.h
weiss_wsg_gripper/src/: gripper.cpp  gripper_exceptions.cpp  gripper_packet_checksum.cpp  gripper_packet_payload.cpp  gripper_packet_receiver.cpp  ipa_canopen_transport.cpp  transport.cpp
(+23 files in other folders)
