<?xml version="1.0"?>
<package>
  <name>schunk_lwa4p_control</name>
  <version>0.0.0</version>
  <description>The schunk_lwa4p_control package</description>
  <maintainer email="johannes.maurer@ist.tugraz.at">Johannes Maurer</maintainer>
  <license>BSD</license>

  <!-- <url type="website">http://wiki.ros.org/schunk_lwa4p_control</url> -->

  <author email="alexander.buchegger@student.tugraz.at">Alexander Buchegger</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>ipa_canopen_core</build_depend>
  <build_depend>weiss_wsg_gripper</build_depend>
  <build_depend>hardware_interface</build_depend>
  <build_depend>controller_manager</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>urdf</build_depend>

  <run_depend>ipa_canopen_core</run_depend>
  <run_depend>weiss_wsg_gripper</run_depend>
  <run_depend>hardware_interface</run_depend>
  <run_depend>controller_manager</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>urdf</run_depend>


  <export>
  </export>
</package>
