<?xml version="1.0"?>
<package>
  <name>schunk_teleop</name>
  <version>0.0.0</version>
  <description>The schunk_teleop package</description>

  <maintainer email="alexander.buchegger@student.tugraz.at">Alexander Buchegger</maintainer>
  <license>BSD</license>
  <!-- <url type="website">http://wiki.ros.org/schunk_teleop</url> -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <!-- <build_depend>joy</build_depend> -->
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>joy</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>

  <export>
  </export>
</package>
