<?xml version="1.0"?>
<package>
  <name>shoring_msgs</name>
  <version>0.0.0</version>
  <description>The shoring_msgs package</description>
  <maintainer email="johannes.maurer@ist.tigraz.at">Johannes Maurer</maintainer>
  <license>BSD</license>

  <!-- <url type="website">http://wiki.ros.org/tedusar_look_around_msgs</url> -->

  <author email="johannes.maurer@ist.tugraz.at">Johannes Maurer</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>actionlib</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>

  <export>

  </export>
</package>